add apiops cycles

--- a/ecosystem/agent-2-agent/apis.yml
+++ b/ecosystem/agent-2-agent/apis.yml
@@ -6,12 +6,14 @@ description: |-
 tags:
   - Agents
 created: '2025-11-16'
-modified: '2025-11-16'
+modified: '2026-01-12'
 url: https://github.com/naftiko/schema/blob/main/ecosystem/agent-2-agent/apis.yml
 specificationVersion: '0.19'
 common:
   - type: JSONSchema
     url: agent-2-agent-schema-v0.3.0.yaml
+  - type: Example
+    url: agent-2-agent-example-recipe.yaml  
 maintainers:
   - FN: Kin Lane
     email: kinlane@naftiko.io
